sample-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: sample-app
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: index-html
        configMap:
          name: index-html
          items:
            - key: index.html
              path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: sample-app
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: sample-app
  labels:
    name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/sampleapp"
        backend:
          service:
            name: nginx
            port: 
              number: 80
